--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     </button>
     <button class="answerButton" id="noButton">Không</button>
     <br />
-    <link rel="stylesheet" href="/MinnTamm/css/valentine.css" />
-    <img src="/MinnTamm/cat.gif" alt="cat asking question" class="responsive" />
-
+    <img src="cat.gif" alt="cat asking question" class="responsive" />
 
     <script>
       document
