--- a/dessert.html
+++ b/dessert.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/dessert.css" />
   </head>
   <body>
-    <div id="dessertquestion">Em muốn ăn món tráng miệng nào?</div>
+    <div id="dessertquestion">Bé muốn ăn món tráng miệng nào?</div>
 
     <div class="dessert-selection">
       <div class="dessert-item">
         <img src="food/boba.jpeg" alt="boba" />
         <label
-          ><input type="checkbox" name="dessert" value="boba" /> Trà sữa</label
+          ><input type="checkbox" name="dessert" value="boba" /> Tà tưa</label
         >
       </div>
       <div class="dessert-item">
