--- a/thankyou.html
+++ b/thankyou.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/lastpage.css" />
   </head>
   <body>
-    <div id="thankyou"><b>Thank you</b></div>
+    <div id="thankyou"><b>Thank you bé nhiều hihihi!</b></div>
 
     <img id="rizz" src="valentines-icegif-5.gif" width="500" alt="rizzler god" class="responsive" />
     <br />
@@ -15,7 +15,7 @@
       <source src="congratulations.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
-    <h1>Từ từ đừng đi!</h1>
+    <h1>Nữa Nè!</h1>
     <button class="button" onclick="location.href='date.html'">
       Bấm vào đây i UWU
     </button>
